# Hello-Rust

./: .gitignore  Cargo.toml  README.MD
hello-benchmark/: Cargo.toml  hello-benchmark.md  readme.md
hello-benchmark/benches/: file_bench.rs  vector_bench.rs
hello-benchmark/src/: file_functions.rs  lib.rs  main.rs  vec_functions.rs
hello-files/: Cargo.toml  hello-files.md  readme.md
hello-files/src/: main.rs
hello-files/src/examples/: example.csv  example.json  example.txt
hello-files/src/file_utilities/: csv_utility.rs  json_utility.rs  mod.rs  txt_utility.rs
hello-files/src/file_utilities/testing/: csv_test.rs  json_test.rs  mod.rs  txt_test.rs
hello-game/: Cargo.toml  readme.md
hello-game/src/: boid.rs  main.rs
hello-web/: Cargo.toml  diesel.toml  index.html  readme.md
hello-web/migrations/2024-05-31-143450_create_items/: up.sql
hello-web/src/: db.rs  main.rs  model.rs  schema.rs
hello-web/src/database/: database.rs
hello-web/src/front-end/: home.rs
hello-web/src/routes/: default.rs  greet.rs  mod.rs  user.rs
hello-web/tests/: tests.rs
hello-world/: Cargo.toml  hello-world.md  main  readme.md
hello-world/src/: hello.rs  main.rs
src/: hello.rs  lib.rs  main.rs  person.rs
