[package]
name = "hello-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
hyper = "1.3.1"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }

egui = "0.27.2"
eframe = "0.27.2"