[package]
name = "hello-web"
version = "0.1.0"
edition = "2021"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"


[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
hyper = "1.3.1"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15" # To load environment variables from a .env file